WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188401
[iOS] fast/events/ios/contenteditable-autocapitalize.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=188401
Summary
[iOS] fast/events/ios/contenteditable-autocapitalize.html is a flaky failure
Wenson Hsieh
Reported
2018-08-07 19:35:42 PDT
<
rdar://problem/32542300
>
Attachments
Patch
(11.19 KB, patch)
2018-08-07 20:17 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Update TestExpectation
(12.16 KB, patch)
2018-08-07 20:42 PDT
,
Wenson Hsieh
rniwa
: review+
Details
Formatted Diff
Diff
Patch for landing
(10.79 KB, patch)
2018-08-08 07:27 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-08-07 20:17:06 PDT
Created
attachment 346753
[details]
Patch
Wenson Hsieh
Comment 2
2018-08-07 20:42:29 PDT
Created
attachment 346755
[details]
Update TestExpectation
Ryosuke Niwa
Comment 3
2018-08-07 22:22:09 PDT
Comment on
attachment 346755
[details]
Update TestExpectation View in context:
https://bugs.webkit.org/attachment.cgi?id=346755&action=review
> Tools/WebKitTestRunner/ios/TestControllerIOS.mm:124 > + > + runUntil(m_isDoneWaitingForKeyboardToDismiss, m_currentInvocation->shortTimeout());
Does m_isDoneWaitingForKeyboardToDismiss really need to be a member variable? Can't it just be a static variable local to this file instead? Alternatively, can simply hand off m_isDoneWaitingForKeyboardToDismiss as an observer so that we don't have to add willHideKeyboard()/didHideKeyboard() to TestController?
Wenson Hsieh
Comment 4
2018-08-08 07:19:15 PDT
(In reply to Ryosuke Niwa from
comment #3
)
> Comment on
attachment 346755
[details]
> Update TestExpectation > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=346755&action=review
> > > Tools/WebKitTestRunner/ios/TestControllerIOS.mm:124 > > + > > + runUntil(m_isDoneWaitingForKeyboardToDismiss, m_currentInvocation->shortTimeout()); > > Does m_isDoneWaitingForKeyboardToDismiss really need to be a member > variable? Can't it just be a static variable local to this file instead? > Alternatively, can simply hand off m_isDoneWaitingForKeyboardToDismiss as an > observer > so that we don't have to add willHideKeyboard()/didHideKeyboard() to > TestController?
Ok — made isDoneWaitingForKeyboardToDismiss a static variable, and removed willHideKeyboard()/didHideKeyboard().
Wenson Hsieh
Comment 5
2018-08-08 07:27:21 PDT
Created
attachment 346769
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2018-08-08 08:06:45 PDT
Comment on
attachment 346769
[details]
Patch for landing Clearing flags on attachment: 346769 Committed
r234691
: <
https://trac.webkit.org/changeset/234691
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug